--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/* Couleur d'arrière-plan pour tout le site */
+body {
+    background-color: #F5F9E9;
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
 /* Image qui prend toute la largeur */
 .full-width-image {
     width: 100%;
