--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1 {
     text-align: center;
     text-decoration: none;
     color: white;
-    background-color: #007bff;
+    background-color: #C2C1A5;
     border-radius: 25px; /* Arrondir les côtés des boutons */
     font-family: Arial, sans-serif;
 }
