--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 /* Titre centré */
 h1 {
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: Rubik Mono One;
     margin: 20px 0;
 }
 
